<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_values"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_values" />
        <item
            android:id="@+id/nav_businesses"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_businesses" />
        <item
            android:id="@+id/nav_organizations"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_organizations" />
        <item
            android:id="@+id/nav_charities"
            android:icon="@drawable/ic_baseline_card_giftcard_24"
            android:title="@string/menu_charities" />
    </group>
</menu>
